[package]
name = "gte-qwen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candle-transformers = { path = "../candle/candle-transformers", version = "0.5.1", features = [
    "cuda",
] }
candle-nn = { path = "../candle/candle-nn", version = "0.5.1", features = [
    "cuda",
] }
candle-core = { path = "../candle/candle-core", version = "0.5.1", features = [
    "cuda",
] }
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.99"
tokenizers = { version = "0.19.1", default-features = false, features = [
    "onig",
] }
thiserror = "1.0.59"
