[package]
name = "gte-qwen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candle-transformers = { git = "https://github.com/huggingface/candle", version = "0.5.1", features = [
    "cuda",
] }
candle-nn = { git = "https://github.com/huggingface/candle", version = "0.5.1", features = [
    "cuda",
] }
candle-core = { git = "https://github.com/huggingface/candle", version = "0.5.1", features = [
    "cuda",
] }
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.99"
tokenizers = { version = "0.19.1", default-features = false, features = [
    "onig",
] }
thiserror = "1.0.59"
